Add all fields to hashCode and equals